[package]
name = "examples"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webkit = { path = "../webkit6", package = "webkit6"}

[dependencies.gtk]
git = "https://github.com/gtk-rs/gtk4-rs.git"
package = "gtk4"
branch = "master"
version = "0.9"

[[bin]]
name = "view"
path = "main.rs"
