[package]
name = "examples"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webkit = { path = "../webkit6", package = "webkit6"}

[dependencies.gtk]
package = "gtk4"
workspace = true


[[bin]]
name = "view"
path = "main.rs"
