[package]
name = "javascriptcore6"
version = "0.2.0"
edition = "2021"
authors = ["Bilal Elmoussaoui <bil.elmoussaoui@gmail.com>"]
categories = ["api-bindings", "gui"]
description = "Rust bindings for JavaScriptCore 6"
repository = "https://gitlab.gnome.org/World/Rust/webkit6-rs"
license = "MIT"
documentation = "https://world.pages.gitlab.gnome.org/Rust/webkit6-rs/stable/latest/docs/javascriptcore6"
keywords = ["webkit", "gtk-rs", "gnome", "GUI"]
exclude = [
    "gir-files/*",
    "webkit-gir-files",
]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]


[dependencies]
libc = "^0.2"
ffi = { package = "javascriptcore6-sys", path = "sys", version = "0.2" }

[dependencies.glib]
git = "https://github.com/gtk-rs/gtk-rs-core.git"
version = "0.20"
branch = "master"
