[package]
name = "webkit-web-process-extension6"
description = "Rust bindings for WebKitWebProcessExtension 6"
documentation = "https://world.pages.gitlab.gnome.org/Rust/webkit6-rs/stable/latest/docs/webkit_web_process_extension6"
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
exclude.workspace = true

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]


[dependencies]
libc = "^0.2"
ffi = { package = "webkit-web-process-extension6-sys", path = "sys", version = "0.2" }
javascriptcore.workspace = true
gtk.workspace = true
gdk.workspace = true
glib.workspace = true
gio.workspace = true
soup.workspace = true
