[package]
name = "webkit6"
version = "0.1.0"
edition = "2021"
authors = ["Bilal Elmoussaoui <bil.elmoussaoui@gmail.com>"]
categories = ["api-bindings", "gui"]
description = "Rust bindings for WebKit 6.0"
repository = "https://gitlab.gnome.org/World/Rust/webkit6-rs"
license = "MIT"
documentation = "https://world.pages.gitlab.gnome.org/Rust/webkit6-rs/stable/latest/docs/webkit6"
keywords = ["webkit", "gtk-rs", "gnome", "GUI"]
exclude = [
    "gir-files/*",
    "webkit-gir-files",
]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
once_cell = "1.8"
libc = "^0.2"
ffi = { package = "webkit6-sys", path = "sys", version = "0.1" }
javascriptcore = { package = "javascriptcore6", path = "../javascriptcore6", version = "0.1" }


[dependencies.gtk]
git = "https://github.com/gtk-rs/gtk4-rs.git"
package = "gtk4"
version = "0.7"
branch = "0.7"

[dependencies.gdk]
git = "https://github.com/gtk-rs/gtk4-rs.git"
package = "gdk4"
version = "0.7"
branch = "0.7"

[dependencies.glib]
git = "https://github.com/gtk-rs/gtk-rs-core.git"
version = "0.18"
branch = "0.18"

[dependencies.gio]
git = "https://github.com/gtk-rs/gtk-rs-core.git"
version = "0.18"
branch = "0.18"

[dependencies.soup]
package = "soup3"
git = "https://gitlab.gnome.org/World/Rust/soup3-rs"
version = "0.5"
branch = "v0.5"

[features]
v2_42 = ["ffi/v2_42"]