[package]
name = "webkit6"
version = "0.2.0"
edition = "2021"
authors = ["Bilal Elmoussaoui <bil.elmoussaoui@gmail.com>"]
categories = ["api-bindings", "gui"]
description = "Rust bindings for WebKit 6.0"
repository = "https://gitlab.gnome.org/World/Rust/webkit6-rs"
license = "MIT"
documentation = "https://world.pages.gitlab.gnome.org/Rust/webkit6-rs/stable/latest/docs/webkit6"
keywords = ["webkit", "gtk-rs", "gnome", "GUI"]
exclude = [
    "gir-files/*",
    "webkit-gir-files",
]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
libc = "^0.2"
ffi = { package = "webkit6-sys", path = "sys", version = "0.2" }
javascriptcore = { package = "javascriptcore6", path = "../javascriptcore6", version = "0.2" }


[dependencies.gtk]
git = "https://github.com/gtk-rs/gtk4-rs.git"
package = "gtk4"
branch = "master"
version = "0.9"

[dependencies.gdk]
git = "https://github.com/gtk-rs/gtk4-rs.git"
package = "gdk4"
branch = "master"
version = "0.9"

[dependencies.glib]
git = "https://github.com/gtk-rs/gtk-rs-core.git"
version = "0.20"
branch = "master"

[dependencies.gio]
git = "https://github.com/gtk-rs/gtk-rs-core.git"
version = "0.20"
branch = "master"

[dependencies.soup]
package = "soup3"
git = "https://gitlab.gnome.org/World/Rust/soup3-rs"
version = "0.7"
branch = "main"

[features]
v2_42 = ["ffi/v2_42"]
v2_44 = ["ffi/v2_44", "v2_42"]