[package]
name = "webkit-web-process-extension6-sys"
version = "0.2.0"
edition = "2021"
build = "build.rs"
authors = ["Bilal Elmoussaoui <bil.elmoussaoui@gmail.com>"]
categories = ["api-bindings", "gui"]
description = "FFI bindings for WebKitWebProcessExtension 6"
repository = "https://gitlab.gnome.org/World/Rust/webkit6-rs"
license = "MIT"
documentation = "https://world.pages.gitlab.gnome.org/Rust/webkit6-rs/stable/latest/docs/webkit_web_process_extension6_sys"
keywords = ["webkit", "gtk-rs", "gnome", "GUI"]
exclude = ["gir-files/*", "webkit-gir-files"]

[package.metadata.docs.rs]
features = []
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[package.metadata.system-deps.webkitgtk_web_process_extension_6_0]
name = "webkitgtk-web-process-extension-6.0"
version = "2.40.0"

[dependencies]
libc = "0.2"

[dependencies.javascriptcore6-rs-sys]
package = "javascriptcore6-sys"
path = "../../javascriptcore6/sys"
version = "0.2"

[dependencies.gio-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.20"
branch = "master"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.20"
branch = "master"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.20"
branch = "master"

[dependencies.gdk4-sys]
git = "https://github.com/gtk-rs/gtk4-rs"
branch = "master"
version = "0.9"

[dependencies.soup3-sys]
git = "https://gitlab.gnome.org/World/Rust/soup3-rs"
version = "0.7"
branch = "main"

[build-dependencies]
system-deps = "6"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
