[package]
name = "webkit-web-process-extension6-sys"
build = "build.rs"
description = "FFI bindings for WebKitWebProcessExtension 6"
documentation = "https://world.pages.gitlab.gnome.org/Rust/webkit6-rs/stable/latest/docs/webkit_web_process_extension6_sys"

[package.version]
workspace = true

[package.edition]
workspace = true

[package.authors]
workspace = true

[package.categories]
workspace = true

[package.repository]
workspace = true

[package.license]
workspace = true

[package.keywords]
workspace = true

[package.exclude]
workspace = true

[package.metadata.docs.rs]
features = []
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[package.metadata.system-deps.webkitgtk_web_process_extension_6_0]
name = "webkitgtk-web-process-extension-6.0"
version = "2.40.0"

[dependencies]
libc = "0.2"

[dependencies.gio-sys]
workspace = true

[dependencies.glib-sys]
workspace = true

[dependencies.gobject-sys]
workspace = true

[dependencies.gtk-sys]
workspace = true

[dependencies.gdk-sys]
workspace = true

[dependencies.soup-sys]
workspace = true

[dependencies.javascriptcore-sys]
workspace = true

[build-dependencies]
system-deps = "6"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
