[package]
name = "webkit6-sys"
version = "0.2.0"
edition = "2021"
build = "build.rs"
authors = ["Bilal Elmoussaoui <bil.elmoussaoui@gmail.com>"]
categories = ["api-bindings", "gui"]
description = "FFI bindings for WebKit 6.0"
repository = "https://gitlab.gnome.org/World/Rust/webkit6-rs"
license = "MIT"
documentation = "https://world.pages.gitlab.gnome.org/Rust/webkit6-rs/stable/latest/docs/webkit6_sys"
keywords = ["webkit", "gtk-rs", "gnome", "GUI"]
exclude = ["gir-files/*", "webkit-gir-files"]

[package.metadata.system-deps.webkitgtk_6_0]
name = "webkitgtk-6.0"
version = "2.40"

[package.metadata.system-deps.webkitgtk_6_0.v2_42]
version = "2.42"

[package.metadata.system-deps.webkitgtk_6_0.v2_44]
version = "2.44"

[package.metadata.docs.rs]
features = []
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[dependencies]
libc = "0.2"

[dependencies.gio-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.20"
branch = "master"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.20"
branch = "master"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.20"
branch = "master"

[dependencies.gdk4-sys]
git = "https://github.com/gtk-rs/gtk4-rs"
branch = "master"
version = "0.9"

[dependencies.gtk4-sys]
git = "https://github.com/gtk-rs/gtk4-rs"
branch = "master"
version = "0.9"

[dependencies.soup3-rs-sys]
package = "soup3-sys"
git = "https://gitlab.gnome.org/World/Rust/soup3-rs"
version = "0.7"
branch = "main"

[dependencies.javascriptcore6-rs-sys]
package = "javascriptcore6-sys"
path = "../../javascriptcore6/sys"
version = "0.2"

[build-dependencies]
system-deps = "6"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
v2_42 = []
v2_44 = ["v2_42"]
