[package]
name = "webkit6-sys"
build = "build.rs"
description = "FFI bindings for WebKit 6.0"
documentation = "https://world.pages.gitlab.gnome.org/Rust/webkit6-rs/stable/latest/docs/webkit6_sys"

[package.version]
workspace = true

[package.edition]
workspace = true

[package.authors]
workspace = true

[package.categories]
workspace = true

[package.repository]
workspace = true

[package.license]
workspace = true

[package.keywords]
workspace = true

[package.exclude]
workspace = true

[package.metadata.system-deps.webkitgtk_6_0]
name = "webkitgtk-6.0"
version = "2.40"

[package.metadata.system-deps.webkitgtk_6_0.v2_42]
version = "2.42"

[package.metadata.system-deps.webkitgtk_6_0.v2_44]
version = "2.44"

[package.metadata.docs.rs]
features = []
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[dependencies]
libc = "0.2"

[dependencies.gio-sys]
workspace = true

[dependencies.glib-sys]
workspace = true

[dependencies.gobject-sys]
workspace = true

[dependencies.gdk-sys]
workspace = true

[dependencies.gtk-sys]
workspace = true

[dependencies.soup-sys]
workspace = true

[dependencies.javascriptcore-sys]
workspace = true

[build-dependencies]
system-deps = "6"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
v2_42 = []
v2_44 = ["v2_42"]
